--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,10 @@
     </string-array>
 
     <string-array name="gender_array">
+        <item>Selecione uma opção</item>
         <item>Masculino</item>
         <item>Feminino</item>
+        <item>Outro</item>
         <item>Prefiro não dizer</item>
     </string-array>
 </resources>
