Notifications and HomeFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,11 @@
     <string-array name="activities_array">
         <item>Tecelagem/Têxtil</item>
     </string-array>
+
+    <string-array name="period_array">
+        <item>Diário</item>
+        <item>Semanal</item>
+        <item>Mensal</item>
+        <item>Anual</item>
+    </string-array>
 </resources>
