--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,7 @@
         <item>Mensal</item>
         <item>Anual</item>
     </string-array>
+
+
+    <string name="emoji">Hi &#128072;</string>
 </resources>
