--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,12 +37,19 @@
         <item>Prefiro não dizer</item>
     </string-array>
 
-
     <string-array name="period_array">
         <item>Diário</item>
         <item>Semanal</item>
         <item>Mensal</item>
         <item>Anual</item>
+    </string-array>
+
+    <string-array name="interval_array">
+        <item>5 minutos</item>
+        <item>10 minutos</item>
+        <item>15 minutos</item>
+        <item>20 minutos</item>
+        <item>30 minutos</item>
     </string-array>
 
 
